[gd_scene load_steps=4 format=3 uid="uid://c50k8qf677q2"]

[ext_resource type="Script" path="res://MenuSceneManager.gd" id="1_ntv6h"]
[ext_resource type="PackedScene" uid="uid://y8dkyt2d6kkb" path="res://Menu/MainMenu.tscn" id="2_8e7kg"]
[ext_resource type="PackedScene" uid="uid://dxpagsi5hpg5g" path="res://Menu/TransitionScreen.tscn" id="3_lihec"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ntv6h")

[node name="Scenes" type="Node2D" parent="."]
z_index = 4

[node name="MenuScene" parent="Scenes" instance=ExtResource("2_8e7kg")]
z_index = 4
offset_left = 415.0
offset_top = 285.0
offset_right = 415.0
offset_bottom = 285.0

[node name="TransitionScreen" parent="." instance=ExtResource("3_lihec")]

[node name="ColorRect" parent="TransitionScreen" index="0"]
offset_right = 8.0
mouse_filter = 2

[connection signal="gamePressed" from="Scenes/MenuScene" to="." method="_on_menu_scene_game_pressed"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_transition_screen_transitioned"]

[editable path="TransitionScreen"]
